Sat Dec 13 08:36:34 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Portable_Interceptors/Bug_1559/Makefile:

	  Updated Makefile dependencies.

Sat Dec 13 08:29:33 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Log/Log_i.cpp:
     
	  Reverted a change that was made accidentally with no ChangeLog
	  entry. This should fix VC6.0 problems in the daily builds.

Sat Dec 13 08:05:50 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/OBV/Collocated/Makefile:

	  Forgor to check this in yesterday :(!

Fri Dec 12 19:27:11 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/OBV/Makefile:
	* tests/Portable_Interceptors/Makefile:
	* tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/Makefile:

	  Added missing directories to the build.

	* tests/Portable_Interceptors/Collocated/Dynamic/run_test.pl:

	  Changed the executable name for the test.

Fri Dec 12 19:10:53 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/OBV/Collocated/Forward/Makefile:

	  Added a makefile for this test.

Fri Dec 12 14:15:04 2003  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tao/Synch_Invocation.cpp:

	  Some more cosmetic fixes.

Fri Dec 12 11:35:30 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:
        * orbsvcs/orbsvcs/LoadBalancing/LB_LeastLoaded.h:
        * orbsvcs/orbsvcs/LoadBalancing/LB_Random.cpp:
        * orbsvcs/orbsvcs/Log/Log_i.cpp:
        
          Added some explicit casting to elininate warnings by MSVC 7.1.
          
        * tao/Typecode.cpp:
        
          Added memory leak fix overlooked in
          
          Sat Nov 29 11:42:48 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
          
          Thanks again to Harvinder Sawhney <harvinder_sawhney@agilent.com>
          for suggesting these fixes.

Fri Dec 12 08:38:14 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
